# ELEC-5660-Project-1-Phase-4

./: .clang-format  .env  .gitignore  .pre-commit-config.yaml  G4 report.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
docker/build-context/home-folder-config/: fixuid-config.yml
docker/latest/: Dockerfile
scripts/: build.sh  kill.sh  kill_all_container.sh  master.sh  mocap_run.sh  pull.sh  push.sh  run.sh  setup.sh  setup_uav.sh  variables.sh
src/RI_Mocap/: readme.md  run.sh
src/RI_Mocap/ekf_pose/: CMakeLists.txt  package.xml
src/RI_Mocap/ekf_pose/cmake/: FindGLIB2.cmake  FindGTHREAD2.cmake
src/RI_Mocap/ekf_pose/config/: TA-camera.yml  tag_1.yml
src/RI_Mocap/ekf_pose/include/: ekf.h
src/RI_Mocap/ekf_pose/launch/: PX4_vio_drone.yaml  mocap.launch  nokov.launch
src/RI_Mocap/ekf_pose/src/: conversion.cpp  ekf_node.cpp  ekf_node_mocap.cpp  ekf_node_vio.cpp  (+3 more)
src/px4ctrl/: CMakeLists.txt  package.xml
src/px4ctrl/config/: ctrl_param_fpv.yaml
src/px4ctrl/launch/: run_ctrl.launch  thrust_calibrate.launch
src/px4ctrl/src/: PX4CtrlFSM.cpp  PX4CtrlFSM.h  PX4CtrlParam.cpp  PX4CtrlParam.h  controller.cpp  controller.h  input.cpp  input.h  px4ctrl_node.cpp
src/px4ctrl/thrust_calibrate_scrips/: record.sh  thrust_calibrate.py
src/traj_generator/: CMakeLists.txt  package.xml  traj_generator.py
src/traj_generator/include/: trajectory_generator_waypoint.h
src/traj_generator/launch/: circle_test.launch  freq_scan.launch  line_test.launch  rviz.rviz  traj_square.launch  traj_test.launch
src/traj_generator/src/: circle_test.cpp  freq_scan.cpp  line_test.cpp  traj_generator.cpp  traj_suqare.cpp  traj_test.cpp  trajectory_generator_waypoint.cpp  yaw_test.cpp
src/utils/catkin_simple/: CMakeLists.txt
src/utils/cmake_utils/: CMakeLists.txt
src/utils/pose_utils/: CMakeLists.txt
src/utils/quadrotor_msgs/: CMakeLists.txt
src/utils/rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
src/utils/uav_utils/: CMakeLists.txt  README.md
(+74 files in other folders)
